--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col-12 col-lg-8">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <h3>Catalogo Libri</h3>
-                    <button type="button"class="btn btn-primary btn-lg">Aggiungi Libro</button>
+                    <a class="btn btn-primary btn-lg" href="./new-book.html" role="button">Aggiungi Libro</a>
                 </div>
             <table class="table table-striped my-5">
                 <thead>
