--- a/new-book.html
+++ b/new-book.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Catalogo libri </a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Catalogo libri</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#">Anagrafica Utenti</a>
@@ -36,18 +36,63 @@
             </div>
         </nav>
     </header>
+    <!---------------MAIN------------>
+<main class="container mt-5">
+    <h1 class="mb-5">Nuovo Libro
+    </h1>
+        <form class="row g-3 needs-validation" novalidate>
+                <div class="col-6">
+                  <label for="validationCustom01" class="form-label">Nome autore</label>
+                  <input type="text" class="form-control" id="validationCustom01" value="Inserisci il nome dell'autore" required>
+                </div>
+                <div class="col-6">
+                  <label for="validationCustom02" class="form-label">Cognome autore</label>
+                  <input type="text" class="form-control" id="validationCustom02" value="Inserisci il cognome dell'autore" required>
+                </div>
+                <div class="col-12 my-4">
+                    <label for="inputTitle" class="form-label">Titolo</label>
+                    <input type="text" class="form-control" id="inputTitle" placeholder="Inserisci il titolo del libro" aria-describedby="titledescript">
+                    <div id="titledescript" class="form-text">
+                      Titolo versione italiana
+                    </div>
+                </div>
 
+                <div class="col-12 col-lg-4 mb-4">
+                    <label for="inputCat" class="form-label">Genere</label>
+                    <select id="inputCat" class="form-select">
+                        <option selected>Scegli il genere..</option>
+                        <option>Thriller</option>
+                        <option>Fantascienza</option>
+                        <option>Horror</option>
+                     </select>
+                </div>
+                <div class="col-12 col-lg-4 mb-4">
+                    <label for="validationCustom01" class="form-label">Anno di pubblicazione</label>
+                  <input type="text" class="form-control" id="validationCustom01" value="Inserisci l'anno" required> 
+                </div>
+                <div class="col-12 col-lg-4 mb-4">
+                    <label for="validationCustom01" class="form-label">ISBN#</label>
+                  <input type="text" class="form-control" id="validationCustom01" value="Inserisci il codice ISBN" required>
+                </div>
+                <hr class="my-5">
 
-
-
-
-
-
-
-
-
-
-
+                <div class="col-12 mb-4">
+                    <label for="note" class="form-label">Note</label>
+                    <textarea class="form-control" id="note" rows="5" placeholder="Inserisci eventuali note sul libro"></textarea>
+                </div>
+    
+                <div class="col-12 mb-4">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="digiswitch">
+                        <label class="form-check-label" for="digiswitch">Disponibile anche in digitale</label>
+                    </div>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary btn-lg">Aggiungi Libro</button>
+                </div>
+            </div>
+        </form>
+</main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
